seperate coredata