@@ -16,13 +16,24 @@ public enum EnumWeapon implements IEnumItem {
     @Override
     public ItemStack getItem() {
         try {
-            Class clazz = Class.forName(name());
-            Weapons object = (Weapons) clazz.getDeclaredConstructor(clazz).newInstance();
+            Class clazz = Class.forName("Items.Weapons."+name());
+            Weapons object = (Weapons) clazz.getDeclaredConstructor().newInstance();
             ItemStack itemStack = object.getItem();
             return itemStack;
         }
         catch(Exception e) {
             e.printStackTrace();
+            return null;
+        }
+    }
+
+    public Weapons getWeapon() {
+        try {
+            Class clazz = Class.forName("Items.Weapons."+name());
+            Weapons weapon = (Weapons) clazz.getDeclaredConstructor().newInstance();
+            return weapon;
+        }
+        catch(Exception e) {
             return null;
         }
     }
